--- a/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
@@ -15,6 +15,9 @@
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:AreasListar' %}">
       <i class="fa fa-network-wired text-primary"></i> Areas de Trabajo
   </a>
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:CandidatosListar' %}">
+      <i class="fa fa-user-graduate text-primary"></i> Candidatos
+  </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="">
       <i class="fa fa-building text-primary"></i> Datos de la empresa
   </a>
@@ -22,7 +25,7 @@
       <i class="fa fa-users text-primary"></i> Empleados
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PuestosListar' %}">
-      <i class="fa fa-id-card text-primary"></i> Puestos Vacantes
+      <i class="fa fa-clipboard-list text-primary"></i> Puestos Vacantes
   </a>
 
 </div>
