Datos de la empresa

--- a/Proyecto/DacodesJobs/templates/panel/Candidatos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Candidatos/listado.html
@@ -3,7 +3,7 @@
 {% block titulo %} Candidatos {% endblock titulo %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item text-capitalize" aria-current="page">Candiatos</li>
+  <li class="breadcrumb-item text-capitalize" aria-current="page">Candidatos</li>
   <li class="breadcrumb-item text-capitalize" aria-current="page">Listado</li>
 {% endblock breadcrumb %}
 
