--- a/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
@@ -18,7 +18,7 @@
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:CandidatosListar' %}">
       <i class="fa fa-user-graduate text-primary"></i> Candidatos
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:DatosEmpresa' %}">
       <i class="fa fa-building text-primary"></i> Datos de la empresa
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:EmpleadosListar' %}">
