--- a/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
@@ -12,13 +12,13 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
       <span><i class="fa fa-bars"></i> Puestos Vacantes Publicados</span>
-      <a href="{% url 'Panel:PanelPuestosCrear' %}" class="btn btn-light" type="button" name="button"><i class="fa fa-plus-circle"></i> Nuevo</a>
+      <a href="" class="btn btn-light" type="button" name="button"><i class="fa fa-plus-circle"></i> Nuevo</a>
     </div>
   </div>
 {% endblock card-header %}
 
 {% block card-body %}
-  {% if puestos %}
+  {% if datosEmpresa %}
     <div class="table-responsive">
       <table class="table table-striped table-hover">
         <thead>
@@ -32,22 +32,20 @@
           </tr>
         </thead>
         <tbody>
-          {% for puesto in puestos %}
           <tr>
-            <th scope="row">{{puesto.id}}</th>
-            <td><a href="{% url 'Panel:PanelPuestosActualizar' puesto.id %}">{{puesto.nombre}}</a></td>
-            <td>{{puesto.salario}}</td>
-            <td>{{puesto.contrato}}</td>
+            <th scope="row">{{datosEmpresa.id}}</th>
+            <td><a href="">{{datosEmpresa.nombre}}</a></td>
+            <td>{{datosEmpresa.salario}}</td>
+            <td>{{datosEmpresa.contrato}}</td>
             <td>
-              {% if puesto.disponible %}
+              {% if datoEmpresa.disponible %}
                 <span class="badge badge-pill badge-primary">Disponible</span>
               {% else %}
                 <span class="badge badge-pill badge-danger">Ocupado</span>
               {% endif %}
             </td>
-            <td><a href="{% url 'Panel:PanelPuestosEliminar' puesto.id %}" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
+            <td><a href="" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
           </tr>
-          {% endfor %}
         </tbody>
       </table>
     </div>
