--- a/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
@@ -90,3 +90,8 @@
     </div>
   {% endif %}
 {% endblock card-body %}
+
+{% block extrajs %}
+  <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+  <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+{% endblock extrajs %}
