--- a/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
@@ -10,7 +10,7 @@
       <i class="fa fa-home text-primary"></i> Inicio
   </a>
 
- <strong class="list-group-item bg-dark text-light text-uppercase"><i class="fa fa-filter"></i> Opciones</strong>
+ <strong class="list-group-item bg-dark text-secondary text-uppercase"><i class="fa fa-filter"></i> Opciones</strong>
 
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:AreasListar' %}">
       <i class="fa fa-network-wired text-primary"></i> Areas de Trabajo
