--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
@@ -44,33 +44,27 @@
 
   <form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.nombre.label }}</label>
-      <div class="col-lg-10">
+    <div class="form-row">
+			<div class="form-group col-sm-6">
+        <label>{{ form.nombre.label }}</label>
         {{ form.nombre }}
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.jefe.label }}</label>
-      <div class="col-lg-10">
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.jefe.label }}</label>
         {{ form.jefe }}
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.descripcion.label }}</label>
-      <div class="col-lg-10">
-        {{ form.descripcion }}
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.imagen_referencial.label }}</label>
-      <div class="col-lg-10">
+			</div>
+      <div class="form-group col-sm-12">
+        <label>{{ form.imagen_referencial.label }}</label>
         {{ form.imagen_referencial }}
-      </div>
-    </div>
+			</div>
+      <div class="form-group col-sm-12">
+        <label>{{ form.descripcion.label }}</label>
+        {{ form.descripcion }}
+			</div>
+		</div>
     <div class="form-group row">
       <div class="container d-flex justify-content-end">
-        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="far fa-save"></i> Guardar Información</button>
+        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="fa fa-save"></i> Guardar Información</button>
       </div>
     </div>
   </form>
