--- a/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
@@ -19,35 +19,8 @@
 
 {% block card-body %}
   {% if datosEmpresa %}
-    <div class="table-responsive">
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Nombre</th>
-            <th>Salario</th>
-            <th>Contrato</th>
-            <th>Estatus</th>
-            <th>Opciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">{{datosEmpresa.id}}</th>
-            <td><a href="">{{datosEmpresa.nombre}}</a></td>
-            <td>{{datosEmpresa.salario}}</td>
-            <td>{{datosEmpresa.contrato}}</td>
-            <td>
-              {% if datoEmpresa.disponible %}
-                <span class="badge badge-pill badge-primary">Disponible</span>
-              {% else %}
-                <span class="badge badge-pill badge-danger">Ocupado</span>
-              {% endif %}
-            </td>
-            <td><a href="" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container">
+      {{datosEmpresa.nombre}}
     </div>
   {% else %}
     <div class="container">
