--- a/Proyecto/DacodesJobs/templates/panel/Empleados/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/Empleados/formulario.html
@@ -1,6 +1,6 @@
 {% extends 'panel/index.html' %}
 {% load staticfiles %}
-{% block titulo %} Areas de trabajo {% endblock titulo %}
+{% block titulo %} Empleados {% endblock titulo %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="{% url 'Panel:EmpleadosListar' %}">Empleados</a></li>
@@ -10,7 +10,6 @@
   {% else %}
     <li class="breadcrumb-item text-capitalize" aria-current="page">Crear</li>
   {% endif %}
-
 {% endblock breadcrumb %}
 
 {% block card-header %}
@@ -44,51 +43,69 @@
 
   <form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.nombre.label }}</label>
-      <div class="col-lg-10">
+    <div class="form-row">
+			<div class="form-group col-sm-6">
+        <label>{{ form.nombre.label }}</label>
         {{ form.nombre }}
-      </div>
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.apellidos.label }}</label>
+        {{ form.apellidos }}
+			</div>
+		</div>
+    <div class="form-row">
+      <div class="form-group col-sm-6">
+        <label>{{ form.rfc.label }}</label>
+          {{ form.rfc }}
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.imss.label }}</label>
+          {{ form.imss }}
+			</div>
     </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.direccion.label }}</label>
-      <div class="col-lg-10">
-        {{ form.direccion }}
-      </div>
+    <div class="form-row">
+      <div class="form-group col-sm-6">
+        <label>{{ form.nivel_estudios.label }}</label>
+          {{ form.nivel_estudios }}
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.carrera.label }}</label>
+          {{ form.carrera }}
+			</div>
     </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.salario.label }}</label>
-      <div class="col-lg-10">
-        {{ form.salario }}
-      </div>
+    <div class="form-row">
+      <div class="form-group col-sm-6">
+        <label>{{ form.direccion.label }}</label>
+          {{ form.direccion }}
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.salario.label }}</label>
+          {{ form.salario }}
+			</div>
     </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.jornada.label }}</label>
-      <div class="col-lg-10">
-        {{ form.jornada }}
-      </div>
+    <div class="form-row">
+      <div class="form-group col-sm-6">
+        <label>{{ form.jornada.label }}</label>
+          {{ form.jornada }}
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.contrato.label }}</label>
+          {{ form.contrato }}
+			</div>
     </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.contrato.label }}</label>
-      <div class="col-lg-10">
-        {{ form.contrato }}
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.fecha_nacimiento.label }}</label>
-      <div class="col-lg-10">
-        {{ form.fecha_nacimiento }}
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="text-input" class="col-lg-2 col-form-label">{{ form.puesto.label }}</label>
-      <div class="col-lg-10">
-        {{ form.puesto }}
-      </div>
+    <div class="form-row">
+      <div class="form-group col-sm-6">
+        <label>{{ form.fecha_nacimiento.label }}</label>
+          {{ form.fecha_nacimiento }}
+			</div>
+      <div class="form-group col-sm-6">
+        <label>{{ form.puesto.label }}</label>
+          {{ form.puesto }}
+			</div>
     </div>
     <div class="form-group row">
       <div class="container d-flex justify-content-end">
-        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="far fa-save"></i> Guardar Información</button>
+        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="fa fa-save"></i> Guardar Información</button>
       </div>
     </div>
   </form>
