--- a/Proyecto/DacodesJobs/templates/panel/index.html
+++ b/Proyecto/DacodesJobs/templates/panel/index.html
@@ -53,7 +53,12 @@
               <div class="card">
                 <div class="card-header">
                   {% block card-header %}
-                  Inicio
+                    <div class="container-fluid">
+                      <div class="row d-flex justify-content-between">
+                        <span><i class="fa fa-bars"></i> Empleados Activos</span>
+                        <a href="{% url 'Panel:EmpleadosCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
+                      </div>
+                    </div>
                   {% endblock card-header %}
                 </div>
                 <div class="card-body">
@@ -74,9 +79,7 @@
                                   <h5 class="card-title mb-0"><i class="far fa-chart-bar"></i> Nivel de estudios de los empleados</h5>
                                 </div><!--Card header--->
                                 <div class="card-body py-3">
-                                  <div class="chart chart-sm">
-                                    <div class="ct-chart ct-golden-section" id="chart1"></div>
-                                  </div>
+                                  <div class="ct-chart ct-golden-section" id="chart1"></div>
                                 </div><!--Card body--->
                               </div><!--Card--->
                             </div><!--Col--->
@@ -129,7 +132,7 @@
                                             </div>
                                           </div>
                                           <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{puestosCount}}</h2>
+                                            <h2 class="text-white">{{areasCount}}</h2>
                                           </div>
                                         </div>
                                       </div>
@@ -146,7 +149,7 @@
                                             </div>
                                           </div>
                                           <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{areasCount}}</h2>
+                                            <h2 class="text-white">{{puestosCount}}</h2>
                                           </div>
                                         </div>
                                       </div>
@@ -158,41 +161,37 @@
                           </div>
 
                           <div class="row mb-3">
-                            <div class="col-12 col-md-6 col-xxl-3 d-flex order-1 order-xxl-1">
+                            <div class="col-12 col-md-6 d-flex order-1">
                               <div class="card flex-fill">
                                 <div class="card-header">
                                   <h5 class="card-title mb-0">Calendar</h5>
                                 </div>
                                 <div class="card-body d-flex">
                                   <div class="align-self-center w-100">
-                                    <div class="chart">
-                                      <div id="datetimepicker-dashboard"></div>
-                                    </div>
+                                    <div class="ct-chart ct-golden-section" id="chart2"></div>
+
                                   </div>
                                 </div>
                               </div>
                             </div>
-                            <div class="col-12 col-md-12 col-xxl-6 d-flex order-3 order-xxl-2 mt-3">
+                          <!--  <div class="col-12 col-md-12 d-flex order-3 mt-3">
                               <div class="card flex-fill w-100">
                                 <div class="card-header">
-                                  <h5 class="card-title mb-0">Current Visitors</h5>
+                                  <h5 class="card-title mb-0">Nivel de estudios de los empleados</h5>
                                 </div>
                                 <div class="card-body px-4">
-                                  <div class="ct-chart ct-golden-section" id="chart3"></div>
                                 </div>
                               </div>
-                            </div>
-                            <div class="col-12 col-md-6 col-xxl-3 d-flex order-2 order-xxl-3">
+                            </div> -->
+                            <div class="col-12 col-md-6 d-flex order-2">
                               <div class="card flex-fill w-100">
                                 <div class="card-header">
-                                  <h5 class="card-title mb-0"><i class="far fa-chart-bar"></i> Cantidad de empleados por area</h5>
+                                  <h5 class="card-title mb-0"><i class="far fa-chart-bar"></i> Empleados por área</h5>
                                 </div>
                                 <div class="card-body d-flex">
                                   <div class="align-self-center w-100">
                                     <div class="py-3">
-                                      <div class="chart chart-xs">
-                                        <div class="ct-chart ct-golden-section" id="chart2"></div>
-                                      </div>
+                                      <div class="ct-chart ct-golden-section" id="chart3"></div>
                                     </div>
                                     <table class="table mb-0">
                                       <tbody>
@@ -212,7 +211,7 @@
 
                         {% if topEmpleados %}
                         <div class="row">
-                          <div class="col-12 col-lg-8 col-xxl-9 d-flex">
+                          <div class="col-12 col-md-6 col-xl-7 d-flex">
                             <div class="card flex-fill mb-2">
                               <div class="card-header">
                                 <h5 class="card-title mb-0">Top 10 Empleados mejor pagados</h5>
@@ -223,7 +222,6 @@
                                     <th>Nombre</th>
                                     <th class="d-none d-xl-table-cell">Carrera</th>
                                     <th class="d-none d-xl-table-cell">Area</th>
-                                    <th class="d-none d-xl-table-cell">Contrato</th>
                                     <th>Salario</th>
                                   </tr>
                                 </thead>
@@ -233,7 +231,6 @@
                                     <td>{{topEmpleado.nombre}}</td>
                                     <td class="d-none d-xl-table-cell">{{topEmpleado.carrera}}</td>
                                     <td class="d-none d-xl-table-cell"><span class="badge badge-success">{{topEmpleado.puesto}}</span></td>
-                                    <td class="d-none d-xl-table-cell">{{topEmpleado.contrato}}</td>
                                     <td >{{topEmpleado.salario}}</td>
                                   </tr>
                                   {% endfor %}
@@ -241,7 +238,7 @@
                               </table>
                             </div>
                           </div>
-                          <div class="col-12 col-lg-4 col-xxl-3 d-flex">
+                          <div class="col-12 col-md-6 col-xl-5 d-flex">
                             <div class="card flex-fill w-100 mb-2">
                               <div class="card-header">
                                 <h5 class="card-title mb-0">Monthly Sales</h5>
@@ -265,9 +262,6 @@
       </div>
     </div>
   </div>
-  {% for key, value in grafica1Nombres.items %}
-    {{key}},
-  {% endfor %}
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
   <script src="{% static 'js/jquery-ui.js' %}"></script>
@@ -290,54 +284,35 @@
   </script>
 
   <script>
-    //Chart 1
-    new Chartist.Pie('#chart1', {
-      series: [20, 10, 30, 40]
-    }, {
-      donut: true,
-      donutWidth: 60,
-      donutSolid: true,
-      startAngle: 270,
-      total: 200,
-      showLabel: true
-    });
-
-    //Chart 2
-    var data = {
-      labels: [{% for key, value in grafica2.items %}{{"'"}}{{key}}{{"'"}},{% endfor %}],
-      series: [{% for key, value in grafica2.items %}{{value}},{% endfor %}]
-      };
-
-      var options = {
-      labelInterpolationFnc: function(value) {
-        return value[0]
-      }
-      };
-
-      var responsiveOptions = [
-      ['screen and (min-width: 640px)', {
-        chartPadding: 30,
-        labelOffset: 100,
-        labelDirection: 'explode',
-        labelInterpolationFnc: function(value) {
-          return value;
-        }
-      }],
-      ['screen and (min-width: 1024px)', {
-        labelOffset: 80,
-        chartPadding: 20
-      }]
-      ];
-
-      new Chartist.Pie('#chart2', data, options, responsiveOptions);
-    //Chart 3
-    new Chartist.Bar('#chart3', {
-      labels: ['XS', 'S', 'M', 'L', 'XL', 'XXL', 'XXXL'],
-      series: [20, 60, 120, 200, 180, 20, 10]
+        //Chart 1
+    new Chartist.Bar('#chart1', {
+      labels: [{% for key, value in grafica1.items %}{{"'"}}{{key}}{{"'"}},{% endfor %}],
+      series: [{% for key, value in grafica1.items %}{{value}},{% endfor %}]
     }, {
       distributeSeries: true
     });
 
+    //Chart2
+    new Chartist.Bar('#chart2', {
+      labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'],
+      series: [
+        [5, 4, 3, 7, 5, 10, 3],
+      ]
+    }, {
+      seriesBarDistance: 10,
+      reverseData: true,
+      horizontalBars: true,
+      axisY: {
+        offset: 70
+      }
+    });
+
+    //Chart 3
+    var data = {
+      labels: [{% for key, value in grafica3.items %}{{"'"}}{{key}}{{"'"}},{% endfor %}],
+      series: [{% for key, value in grafica3.items %}{{value}},{% endfor %}]
+      };
+    new Chartist.Pie('#chart3', data);
   </script>
   {% block extrajs %}
   {% endblock extrajs %}
