--- a/Proyecto/DacodesJobs/templates/panel/partials/Nav.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/Nav.html
@@ -16,12 +16,13 @@
         <div class="dropdown">
           <!-- <img src="{% static 'images/person_1.jpg' %}" class="img-fluid rounded-circle" width="50"> -->
           <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
-            {{ user.username }} <span class="caret"></span>
+            <i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span>
           </a>
 
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'logout' %}"> Logout
-            </a>
+            <a class="dropdown-item" href="{% url 'Panel:UsuarioConfig' %}"><i class="fa fa-user-cog"></i> Configuración</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Logout</a>
           </div>
         </div>
       </ul>
