Cambio de iconos

--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/eliminar.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/eliminar.html
@@ -20,7 +20,7 @@
     <div class="col-lg-6 d-flex align-self-center justify-content-center">
       <form method="post" class="container">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger btn-lg btn-block"><i class="far fa-trash-alt"></i> Confirmar Eliminación</button>
+        <button type="submit" class="btn btn-danger btn-lg btn-block"><i class="fal fa-trash"></i> Confirmar Eliminación</button>
       </form>
     </div>
   </div>
