--- a/Proyecto/DacodesJobs/templates/panel/Candidatos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Candidatos/listado.html
@@ -10,7 +10,7 @@
 {% block card-header %}
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
-      <span><i class="fa fa-bars"></i> Candidatos Postulados</span>
+      <span><i class="fal fa-bars"></i> Candidatos Postulados</span>
     </div>
   </div>
 {% endblock card-header %}
@@ -30,7 +30,7 @@
           <tr>
             <th>{{candiato.id}}</th>
             <td><a href="">{{candiato.nombre}}</a></td>
-            <td><a href="{% url 'Panel:CandidatosEliminar' candidato.id %}" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
+            <td><a href="" class="btn btn-danger btn-sm"><i class="fal fa-trash"></i></a></td>
           </tr>
           {% endfor %}
         </tbody>
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex align-self-center justify-content-center">
           <div class="">
-            <span class="h1 display-3"><strong><i class="fa fa-exclamation-circle text-warning"></i> Ups!</strong></span>
+            <span class="h1 display-3"><strong><i class="fal fa-exclamation-circle text-warning"></i> Ups!</strong></span>
             <p class="display-5 text-primary"><strong><i class="fa fa-database"></i> Sin información desponible</strong></p>
           </div>
         </div>
