--- a/Proyecto/DacodesJobs/templates/panel/Puestos/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/Puestos/formulario.html
@@ -94,7 +94,7 @@
 
     <div class="form-group row">
       <div class="container d-flex justify-content-end">
-        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="fa fa-save"></i> Guardar Información</button>
+        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="fal fa-save"></i> Guardar Información</button>
       </div>
     </div>
   </form>
