--- a/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
@@ -7,25 +7,27 @@
 </div>
 <div class="list-group list-group-flush bg-dark">
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:Index' %}">
-      <i class="fa fa-home text-primary"></i> Inicio
+      <i class="fal fa-home text-primary"></i> Inicio
   </a>
 
- <strong class="list-group-item bg-dark text-secondary text-uppercase"><i class="fa fa-filter"></i> Opciones</strong>
+ <strong class="list-group-item bg-dark text-secondary text-uppercase"><i class="fal fa-filter"></i> Opciones</strong>
 
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:AreasListar' %}">
-      <i class="fa fa-network-wired text-primary"></i> Areas de Trabajo
+      <i class="fal fa-sitemap text-primary"></i> Areas de Trabajo
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:CandidatosListar' %}">
-      <i class="fa fa-user-graduate text-primary"></i> Candidatos
+      <i class="fal fa-user-graduate text-primary"></i> Candidatos
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:DatosEmpresa' %}">
-      <i class="fa fa-building text-primary"></i> Datos de la empresa
+      <i class="fal fa-industry-alt text-primary"></i> Datos de la empresa
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:EmpleadosListar' %}">
-      <i class="fa fa-users text-primary"></i> Empleados
+      <i class="fal fa-users text-primary"></i> Empleados
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PuestosListar' %}">
-      <i class="fa fa-clipboard-list text-primary"></i> Puestos Vacantes
+      <i class="fal fa-clipboard-list text-primary"></i> Puestos Vacantes
   </a>
-
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="">
+      <i class="fal fa-user text-primary"></i> Usuarios
+  </a>
 </div>
