--- a/Proyecto/DacodesJobs/templates/login.html
+++ b/Proyecto/DacodesJobs/templates/login.html
@@ -17,6 +17,8 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'vendor/sidebar/simple-sidebar.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/login/signin.css' %}">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css">
+
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -54,7 +56,7 @@
         {{ form.username }}
         {{ form.password }}
       </div>
-      <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-success btn-block" type="submit">Sign in <i class="fal fa-sign-in"></i></button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
     </form>
 
