--- a/Proyecto/DacodesJobs/templates/panel/Candidatos/eliminar.html
+++ b/Proyecto/DacodesJobs/templates/panel/Candidatos/eliminar.html
@@ -13,14 +13,14 @@
   <div class="row">
     <div class="col-lg-6 d-flex align-self-center justify-content-center">
       <div class="">
-        <span class="h1 display-3"><strong><i class="fa fa-exclamation-circle text-warning"></i> Alerta!</strong></span>
+        <span class="h1 display-3"><strong><i class="fal fa-exclamation-circle text-warning"></i> Alerta!</strong></span>
         <p class="display-5 text-primary"><strong><i class="fa fa-database"></i> Está a punto de eliminar el registro: {{object}}</strong></p>
       </div>
     </div>
     <div class="col-lg-6 d-flex align-self-center justify-content-center">
       <form method="post" class="container">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger btn-lg btn-block"><i class="far fa-trash-alt"></i> Confirmar Eliminación</button>
+        <button type="submit" class="btn btn-danger btn-lg btn-block"><i class="fal fa-trash"></i> Confirmar Eliminación</button>
       </form>
     </div>
   </div>
