--- a/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/DatosEmpresa/listado.html
@@ -11,8 +11,8 @@
 {% block card-header %}
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
-      <span><i class="fa fa-bars"></i> Puestos Vacantes Publicados</span>
-      <a href="" class="btn btn-light" type="button" name="button"><i class="fa fa-plus-circle"></i> Nuevo</a>
+      <span><i class="fal fa-bars"></i> Puestos Vacantes Publicados</span>
+      <a href="" class="btn btn-light" type="button" name="button"><i class="fal fa-plus-circle"></i> Nuevo</a>
     </div>
   </div>
 {% endblock card-header %}
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex align-self-center justify-content-center">
           <div class="">
-            <span class="h1 display-3"><strong><i class="fa fa-exclamation-circle text-warning"></i> Ups!</strong></span>
+            <span class="h1 display-3"><strong><i class="fal fa-exclamation-circle text-warning"></i> Ups!</strong></span>
             <p class="display-5 text-primary"><strong><i class="fa fa-database"></i> Sin información desponible</strong></p>
           </div>
         </div>
