--- a/Proyecto/DacodesJobs/templates/panel/index.html
+++ b/Proyecto/DacodesJobs/templates/panel/index.html
@@ -17,10 +17,11 @@
     <link rel="stylesheet" href="{% static 'fonts/flaticon/font/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
 
-    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/sidebar/simple-sidebar.css' %}">
 
     <link rel="stylesheet" href="{% static 'vendor/chartists/chartist.css' %}">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css">
 
     {% block extracss %}
     {% endblock extracss %}
@@ -47,7 +48,6 @@
               {% endblock breadcrumb %}
             </ol>
           </nav>
-
           <div class="container-fluid mb-3">
             <div class="col-xl-12">
               <div class="card">
@@ -55,8 +55,8 @@
                   {% block card-header %}
                     <div class="container-fluid">
                       <div class="row d-flex justify-content-between">
-                        <span><i class="fa fa-bars"></i> Empleados Activos</span>
-                        <a href="{% url 'Panel:EmpleadosCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
+                        <span><i class="fal fa-bars"></i> Empleados Activos</span>
+                        <a href="{% url 'Panel:EmpleadosCrear' %}" class="btn btn-light"><i class="fal fa-plus-circle"></i> Nuevo</a>
                       </div>
                     </div>
                   {% endblock card-header %}
@@ -64,93 +64,103 @@
                 <div class="card-body">
                   {% block card-body %}
                     <main class="content">
-                        <div class="container-fluid">
-                          <div class="header text-center">
-                            <h1 class="header-title">
-                              Welcome back, {{user.username | upper}}!
-                            </h1>
-                            <p class="header-subtitle">You have 24 new messages and 5 new notifications.</p>
-                          </div>
+                      <div class="container-fluid">
+                        <div class="row mb-3">
+                          <div class="col-xl-7">
+                            <div class="card flex-fill w-100 mb-2">
+                              <div class="card-header">
+                                <h5 class="card-title mb-0"><i class="fal fa-chart-bar"></i> Nivel de estudios de los empleados</h5>
+                              </div><!--Card header--->
+                              <div class="card-body py-3">
+                                <div class="ct-chart ct-golden-section ct-octave" id="chart1"></div>
+                              </div><!--Card body--->
+                            </div><!--Card--->
+                          </div><!--Col--->
 
-                          <div class="row mb-3">
-                            <div class="col-xl-7">
-                              <div class="card flex-fill w-100 mb-2">
-                                <div class="card-header">
-                                  <h5 class="card-title mb-0"><i class="far fa-chart-bar"></i> Nivel de estudios de los empleados</h5>
-                                </div><!--Card header--->
-                                <div class="card-body py-3">
-                                  <div class="ct-chart ct-golden-section" id="chart1"></div>
-                                </div><!--Card body--->
-                              </div><!--Card--->
-                            </div><!--Col--->
-
-                            <div class="col-xl-5 d-flex">
-                              <div class="w-100">
-                                <div class="row">
-                                  <div class="col-sm-6">
-                                    <div class="card flex-fill bg-primary text-white mb-3">
-                                      <div class="card-body py-2">
-                                        <h6 class="card-title text-white mb-4">Empleados</h6>
-                                        <div class="row no-gutters">
-                                          <div class="col-4 align-self-center text-left">
-                                            <div class="icon icon-primary">
-                                              <i class="align-middle fa fa-user-tie fa-4x"></i>
-                                            </div>
+                          <div class="col-xl-5 d-flex">
+                            <div class="w-100">
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <div class="card flex-fill bg-primary text-white mb-3">
+                                    <a href="#"></a>
+                                    <div class="card-body py-2">
+                                      <h6 class="card-title text-white mb-4">Empleados</h6>
+                                      <div class="row no-gutters">
+                                        <div class="col-4 align-self-center text-left">
+                                          <div class="icon icon-primary">
+                                            <i class="align-middle fal fa-user-tie fa-4x"></i>
                                           </div>
-                                          <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{empleadosCount}}</h2>
-                                          </div>
+                                        </div>
+                                        <div class="col-8 align-self-center text-right">
+                                          <h2 class="text-white">{{empleadosCount}}</h2>
                                         </div>
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="col-sm-6">
-                                    <div class="card flex-fill bg-success text-white mb-3">
-                                      <div class="card-body py-2">
-                                        <h6 class="card-title text-white mb-4">Candidatos</h6>
-                                        <div class="row no-gutters">
-                                          <div class="col-4 align-self-center text-left">
-                                            <div class="icon icon-primary">
-                                              <i class="align-middle fa fa-user-graduate fa-4x"></i>
-                                            </div>
+                                </div>
+                                <div class="col-sm-6">
+                                  <div class="card flex-fill bg-success text-white mb-3">
+                                    <div class="card-body py-2">
+                                      <h6 class="card-title text-white mb-4">Candidatos</h6>
+                                      <div class="row no-gutters">
+                                        <div class="col-4 align-self-center text-left">
+                                          <div class="icon icon-primary">
+                                            <i class="align-middle fal fa-users fa-4x"></i>
                                           </div>
-                                          <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{candidatosCount}}</h2>
-                                          </div>
+                                        </div>
+                                        <div class="col-8 align-self-center text-right">
+                                          <h2 class="text-white">{{candidatosCount}}</h2>
                                         </div>
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="col-sm-6">
-                                    <div class="card flex-fill bg-danger text-white mb-3">
-                                      <div class="card-body py-2">
-                                        <h6 class="card-title text-white mb-4">Areas Disponibles</h6>
-                                        <div class="row no-gutters">
-                                          <div class="col-4 align-self-center text-left">
-                                            <div class="icon icon-primary">
-                                              <i class="align-middle fa fa-network-wired fa-4x"></i>
-                                            </div>
+                                </div>
+                                <div class="col-sm-6">
+                                  <div class="card flex-fill bg-danger text-white mb-3">
+                                    <div class="card-body py-2">
+                                      <h6 class="card-title text-white mb-4">Areas Disponibles</h6>
+                                      <div class="row no-gutters">
+                                        <div class="col-4 align-self-center text-left">
+                                          <div class="icon icon-primary">
+                                            <i class="align-middle fal fa-sitemap fa-4x"></i>
                                           </div>
-                                          <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{areasCount}}</h2>
-                                          </div>
+                                        </div>
+                                        <div class="col-8 align-self-center text-right">
+                                          <h2 class="text-white">{{areasCount}}</h2>
                                         </div>
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="col-sm-6">
-                                    <div class="card flex-fill bg-warning text-white mb-3">
-                                      <div class="card-body py-2">
-                                        <h6 class="card-title text-white mb-4">Puestos Disponibles</h6>
-                                        <div class="row no-gutters">
-                                          <div class="col-4 align-self-center text-left">
-                                            <div class="icon icon-primary">
-                                              <i class="align-middle fa fa-clipboard-list fa-4x"></i>
-                                            </div>
+                                </div>
+                                <div class="col-sm-6">
+                                  <div class="card flex-fill bg-warning text-white mb-3">
+                                    <div class="card-body py-2">
+                                      <h6 class="card-title text-white mb-4">Puestos Disponibles</h6>
+                                      <div class="row no-gutters">
+                                        <div class="col-4 align-self-center text-left">
+                                          <div class="icon icon-primary">
+                                            <i class="align-middle fal fa-clipboard-list fa-4x"></i>
                                           </div>
-                                          <div class="col-8 align-self-center text-right">
-                                            <h2 class="text-white">{{puestosCount}}</h2>
+                                        </div>
+                                        <div class="col-8 align-self-center text-right">
+                                          <h2 class="text-white">{{puestosCount}}</h2>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-sm-6">
+                                  <div class="card flex-fill bg-info text-white mb-3">
+                                    <div class="card-body py-2">
+                                      <h6 class="card-title text-white mb-4">Usuarios</h6>
+                                      <div class="row no-gutters">
+                                        <div class="col-4 align-self-center text-left">
+                                          <div class="icon icon-primary">
+                                            <i class="align-middle fal fa-user fa-4x"></i>
                                           </div>
+                                        </div>
+                                        <div class="col-8 align-self-center text-right">
+                                          <h2 class="text-white">{{usuariosCount}}</h2>
                                         </div>
                                       </div>
                                     </div>
@@ -159,12 +169,12 @@
                               </div>
                             </div>
                           </div>
-
-                          <div class="row mb-3">
+                        </div>
+                        <div class="row mb-3">
                             <div class="col-12 col-md-6 d-flex order-1">
                               <div class="card flex-fill">
                                 <div class="card-header">
-                                  <h5 class="card-title mb-0">Calendar</h5>
+                                  <h5 class="card-title mb-0"><i class="fal fa-chart-bar"></i> Candidatos postulados</h5>
                                 </div>
                                 <div class="card-body d-flex">
                                   <div class="align-self-center w-100">
@@ -174,47 +184,37 @@
                                 </div>
                               </div>
                             </div>
-                          <!--  <div class="col-12 col-md-12 d-flex order-3 mt-3">
-                              <div class="card flex-fill w-100">
-                                <div class="card-header">
-                                  <h5 class="card-title mb-0">Nivel de estudios de los empleados</h5>
-                                </div>
-                                <div class="card-body px-4">
-                                </div>
+                          <div class="col-12 col-md-6 d-flex order-2">
+                            <div class="card flex-fill w-100">
+                              <div class="card-header">
+                                <h5 class="card-title mb-0"><i class="fal fa-chart-bar"></i> Empleados por área</h5>
                               </div>
-                            </div> -->
-                            <div class="col-12 col-md-6 d-flex order-2">
-                              <div class="card flex-fill w-100">
-                                <div class="card-header">
-                                  <h5 class="card-title mb-0"><i class="far fa-chart-bar"></i> Empleados por área</h5>
-                                </div>
-                                <div class="card-body d-flex">
-                                  <div class="align-self-center w-100">
-                                    <div class="py-3">
-                                      <div class="ct-chart ct-golden-section" id="chart3"></div>
-                                    </div>
-                                    <table class="table mb-0">
-                                      <tbody>
-                                        {% for key, value in grafica2.items %}
-                                          <tr>
-                                            <td><i class="fas fa-chevron-right"></i> {{key}}</td>
-                                            <td class="text-right">{{value}}</td>
-                                          </tr>
-                                        {% endfor %}
-                                      </tbody>
-                                    </table>
+                              <div class="card-body d-flex">
+                                <div class="align-self-center w-100">
+                                  <div class="py-3">
+                                    <div class="ct-chart ct-golden-section" id="chart3"></div>
                                   </div>
+                                  <table class="table mb-0">
+                                    <tbody>
+                                      {% for key, value in grafica2.items %}
+                                        <tr>
+                                          <td><i class="fal fa-chevron-right"></i> {{key}}</td>
+                                          <td class="text-right">{{value}}</td>
+                                        </tr>
+                                      {% endfor %}
+                                    </tbody>
+                                  </table>
                                 </div>
                               </div>
                             </div>
+                          </div>
                         </div>
-
                         {% if topEmpleados %}
                         <div class="row">
                           <div class="col-12 col-md-6 col-xl-7 d-flex">
                             <div class="card flex-fill mb-2">
                               <div class="card-header">
-                                <h5 class="card-title mb-0">Top 10 Empleados mejor pagados</h5>
+                                <h5 class="card-title mb-0"><i class="fal fa-chart-bar"></i> Top 10 Empleados mejor pagados</h5>
                               </div>
                               <table id="datatables-dashboard" class="table table-striped my-0">
                                 <thead>
@@ -241,7 +241,7 @@
                           <div class="col-12 col-md-6 col-xl-5 d-flex">
                             <div class="card flex-fill w-100 mb-2">
                               <div class="card-header">
-                                <h5 class="card-title mb-0">Monthly Sales</h5>
+                                <h5 class="card-title mb-0"><i class="fal fa-chart-bar"></i> Monthly Sales</h5>
                               </div>
                               <div class="card-body d-flex w-100">
                                 <div class="align-self-center chart chart-lg">
@@ -294,9 +294,9 @@
 
     //Chart2
     new Chartist.Bar('#chart2', {
-      labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'],
+      labels: [{% for key, value in grafica2.items %}{{"'"}}{{key}}{{"'"}},{% endfor %}],
       series: [
-        [5, 4, 3, 7, 5, 10, 3],
+        [{% for key, value in grafica2.items %}{{value}},{% endfor %}],
       ]
     }, {
       seriesBarDistance: 10,
