--- a/Proyecto/DacodesJobs/templates/users/formulario_candidatos.html
+++ b/Proyecto/DacodesJobs/templates/users/formulario_candidatos.html
@@ -69,7 +69,7 @@
             </div>
             <div class="form-group row">
               <div class="container d-flex justify-content-end">
-                <button type="submit" class="btn btn-success"><i class="far fa-share-square"></i> Enviar Información</button>
+                <button type="submit" class="btn btn-success"><i class="fal fa-share"></i> Enviar Información</button>
               </div>
             </div>
           </form>
