--- a/Proyecto/DacodesJobs/templates/users/index.html
+++ b/Proyecto/DacodesJobs/templates/users/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free/css/all.min.css' %}">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css">
     {% block extracss %}
     {% endblock extracss %}
   </head>
