--- a/Proyecto/DacodesJobs/templates/users/partials/Nav.html
+++ b/Proyecto/DacodesJobs/templates/users/partials/Nav.html
@@ -12,22 +12,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'base:Index' %}"><i class="fa fa-home"></i> Inicio</a>
+        <a class="nav-link" href="{% url 'base:Index' %}"><i class="fal fa-home"></i> Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'Puestos:Puestos' %}"><i class="fa fa-building"></i> Puestos</a>
+        <a class="nav-link" href="{% url 'Puestos:Puestos' %}"><i class="fal fa-file"></i> Puestos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'AreasTrabajo:Areas' %}"><i class="fa fa-network-wired"></i> Areas de Trabajo</a>
+        <a class="nav-link" href="{% url 'AreasTrabajo:Areas' %}"><i class="fal fa-sitemap"></i> Areas de Trabajo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'base:Nosotros' %}"><i class="fa fa-briefcase"></i> Nosotros</a>
+        <a class="nav-link" href="{% url 'base:Nosotros' %}"><i class="fal fa-industry"></i> Nosotros</a>
       </li>
     </ul>
     <div class="my-2 my-lg-0">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'Login' %}"><i class="fas fa-user fa-2x"></i><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'Login' %}"><i class="fal fa-user fa-2x"></i><span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
