--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/listado.html
@@ -18,51 +18,54 @@
 
 {% block card-body %}
   {% if areas %}
-    <div class="table-responsive">
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Nombre</th>
-            <th>Jefe de area</th>
-            <th>Opciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for area in areas %}
-          <tr>
-            <th>{{area.id}}</th>
-            <td><a href="{% url 'Panel:AreasActualizar' area.id %}">{{area.nombre}}</a></td>
-            <td>{{area.jefe}}</td>
-            <td><a href="{% url 'Panel:AreasEliminar' area.id %}" class="btn btn-danger btn-sm"><i class="fal fa-trash"></i></a></td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% if is_paginated %}
-        <nav aria-label="Page navigation example">
-          <ul class="pagination">
-            {% if page_obj.has_previous %}
-              <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-            {% else %}
-              <li class="page-item disabled"><span>&laquo;</span></li>
-            {% endif %}
-            {% for i in paginator.page_range %}
-              {% if page_obj.number == i %}
-                <li class="page-item active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-              {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-              {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-              <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-            {% else %}
-              <li class="page-item disabled"><span>&raquo;</span></li>
-            {% endif %}
-          </ul>
-        </nav>
-      {% endif %}
-  </div>
+    <div class="container">
+      <div class="row">
+        {% for area in areas %}
+          <div class="col-sm-4 mb-4">
+            <div class="card">
+              <img src="{{area.imagen_referencial.url}}" class="card-img-top img-fluid">
+              <div class="card-body">
+                <h5 class="card-title">{{area.nombre}}</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="container">
+                  <div class="row d-flex justify-content-between">
+                    <a href="{% url 'Panel:AreasActualizar' area.id %}" class="btn btn-success"><i class="fal fa-edit"></i></a>
+                    <a href="{% url 'Panel:AreasEliminar' area.id %}" class="btn btn-danger"><i class="fal fa-trash"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    {% if is_paginated %}
+    <div class="d-flex justify-content-center">
+      <ul class="pagination pagination-lg">
+        {% if page_obj.has_previous %}
+          <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
+        {% endif %}
+
+        {% for i in paginator.page_range %}
+          {% if page_obj.number == i %}
+            <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+          <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
+        {% endif %}
+      </ul>
+    </div>
+
+    {% endif %}
   {% else %}
     <div class="container">
       <div class="row">
