--- a/Proyecto/DacodesJobs/templates/panel/User/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/User/formulario.html
@@ -37,6 +37,16 @@
    </div>
   {% endif %}
 
+  {% if messages %}
+    <div class="alert alert-dismissible alert-success">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      {% for message in messages %}
+      <span {% if message.tags %} class=" {{ message.tags }} " {% endif %}></span>
+        <strong><i class="fal fa-check-circle"></i> </strong>{{ message }}
+      {% endfor %}
+    </div>
+  {% endif %}
+
   <form method="post">
     {% csrf_token %}
     <div class="form-row">
